dotNetRDF Toolkit for Windows/Mono
==================================

A Toolkit of command line utilities and GUI tools for working with RDF data

Version 0.4.0 Beta

Robert Vesse 2009-11
rvesse@vdesign-studios.com

Change Log
----------

This represents a summary of additions, changes and removals for the 0.4.0 release of the dotNetRDF Toolkit
for Windows/Mono detailed by Tool.

Note: While some tools may have no changes all tools benefit from being upgraded to the latest release of the
dotNetRDF core library which typically incorporates bug fixes and performance improvements so you should still
upgrade to these latest versions.

rdfConvert

rdfEditor (Not available under Mono)
 
rdfOptStats
   
rdfQuery

rdfSqlStorage
 
rdfWebDeploy

soh 

SparqlGUI

StoreManager
- Added a new Start Page
- Completely revised the New Connection dialogue to make it more user friendly
- Added Dydra support
- Added the ability for users to use Store Manager with custom store types simply by dropping a DLL into the plugins folder