@@ -21,6 +21,7 @@ upgrade to these latest versions.
 rdfConvert
 
 rdfEditor (Not available under Mono)
+- Added multi-document editing support
  
 rdfOptStats
    
@@ -29,6 +30,8 @@ rdfQuery
 rdfSqlStorage
  
 rdfWebDeploy
+- Added -fulltext flag for including Query.FullText libraries
+- Revised -test mode so it can spot types from the other libraries and advise on the need for deployment
 
 soh 
 
@@ -39,3 +42,5 @@ StoreManager
 - Completely revised the New Connection dialogue to make it more user friendly
 - Added Dydra support
 - Added the ability for users to use Store Manager with custom store types simply by dropping a DLL into the plugins folder
+- Added Copy/Move/Renamed functionality for Graphs including Drag/Drop between open stores
+- Bug Fix to missing variables in SPARQL Results View for some kinds of queries
